fixes bug that would cause the flag to appear unaligned

--- a/src/components/popup/intro/intro.less
+++ b/src/components/popup/intro/intro.less
@@ -34,6 +34,9 @@ div.intro {
 	  	width: 100%;
 	  	text-align: center;
 	}
+  	.customFlagSelect img {
+	  	vertical-align: initial;
+	}
   	.customLogo {
 	  	width: 100%;
 	  	height: 80px;
